--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -379,10 +379,10 @@ footer a:nth-child(1) {
     margin-top: 0;
     margin-bottom: 0;
     color: #000;
-    transform: translate(65.5%, 1300%) !important;
+    transform: translate(65.5%, 31rem) !important;
 }
 .txt-title {
-    transform: translate(65.5%, 21rem) !important;
+    transform: translate(65.5%, 31rem) !important;
     font-family: "VanderKeur-light";
     font-size: 11px;
     letter-spacing: 2px;
@@ -1470,6 +1470,9 @@ figure img {
 }
 
 /***************/
+.film-grid_item video{
+    width: 100%;
+}
 .film-grid {
     display: flex;
     flex-wrap: wrap;
@@ -1873,7 +1876,7 @@ a:hover {
     .main-director-names {
         font-size: 24px;
 
-        transform: translateX(0rem) !important;
+    transform: translateX(0rem) !important;
     }
     .main-panel {
         transition: 0.6s;
@@ -2097,14 +2100,19 @@ a:hover {
 @media (max-width: 768px) {
     .txt-title {
         /*     transform: translate(62.5%, 19rem) !important;*/
+        transform: translate(65.5%, 26rem) !important;
+    font-size: 10px;
     }
     .main-director-names {
-        font-size: 17px;
+        font-size: 14px;
+        line-height: 1;
         /*
         transform: translate(62.5%, 1163%) !important;*/
+        transform: translate(65.5%, 26rem) !important;
     }
     .name-info {
-        transform: translateX(57.5%) translateY(-8.35vw) rotate(90deg);
+       /* transform: translateX(57.5%) translateY(-8.35vw) rotate(90deg);*/
+       transform: translateX(64.5%) translateY(-5.35vw) rotate(90deg);
     }
     .main-info .info {
         transform: translate(8rem, 0px);
@@ -2113,6 +2121,11 @@ a:hover {
     }
     .panel {
         /*  width: calc(60% - 4.05vw);*/
+    }
+    .name-info h3 {
+
+        font-size: 22px;
+
     }
     .main-info .info {
         transform: translate(1rem, 0px);
@@ -2185,7 +2198,7 @@ a:hover {
         transform: translateX(41.9%) translateY(-5.35vw) rotate(90deg);
     }
     .main-director-names {
-        transform: translate(65.5%, 1900%) !important;
+     /*   transform: translate(65.5%, 1900%) !important;*/
     }
     .txt-title {
         transform: translate(65.5%, 31rem) !important;
@@ -2206,7 +2219,7 @@ a:hover {
     .main-director-names {
         font-size: 20px;
 
-        transform: translate(65.5%, 1100%) !important;
+     /*   transform: translate(65.5%, 1100%) !important;*/
     }
     .txt-title {
         transform: translate(65.5%, 18rem) !important;
@@ -2267,11 +2280,14 @@ a:hover {
 
 @media only screen and (device-width: 1440px) and (min-height: 649px) {
     .main-director-names {
-        transform: translate(65.5%, 1414%) !important;
+     /*   transform: translate(65.5%, 1414%) !important;*/
+
     }
-    .txt-title {
-        transform: translate(65.5%, 1440%) !important;
+    .name-info {
+        transform: translateX(62.1%) translateY(-5.35vw) rotate(90deg);
+
     }
+
     .open {
         transform: translateX(455px) !important;
     }
@@ -2283,7 +2299,7 @@ a:hover {
 
 @media only screen and (width: 1440px) and (height: 900px) {
     .main-director-names {
-        transform: translate(65.5%, 2320%) !important;
+       /* transform: translate(65.5%, 2320%) !important;*/
     }
     .txt-title {
         transform: translate(65.5%, 2323%) !important;
@@ -2301,7 +2317,7 @@ a:hover {
 }
 @media only screen and (width: 1280px) and (height: 950px) {
     .main-director-names {
-        transform: translate(65.5%, 2512%) !important;
+       /* transform: translate(65.5%, 2512%) !important;*/
     }
     .txt-title {
         transform: translate(65.5%, 41rem) !important;
@@ -2318,7 +2334,7 @@ a:hover {
 }
 @media only screen and (width: 1280px) and (height: 800px) {
     .main-director-names {
-        transform: translate(65.5%, 2512%) !important;
+      /*  transform: translate(65.5%, 2512%) !important;*/
     }
     .txt-title {
         transform: translate(65.5%, 32rem) !important;
@@ -2327,10 +2343,10 @@ a:hover {
         transform: translateX(393px) !important;
     }
     .name-info {
-        transform: translateX(45.9%) translateY(-5.35vw) rotate(90deg);
+     /*   transform: translateX(45.9%) translateY(-5.35vw) rotate(90deg);*/
     }
     .main-director-names {
         font-size: 23px;
-        transform: translate(65.5%, 1955%) !important;
+      /*  transform: translate(65.5%, 1955%) !important;*/
     }
 }
