--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -334,7 +334,7 @@ footer a:nth-child(1) {
 }
 
 .footer-info {
-    position: absolute;
+
     bottom: 0;
 }
 .footer-info p {
@@ -504,7 +504,12 @@ img {
     letter-spacing: 1px;
 }
 .logo-info {
-    text-align: end;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.vimeo{
+    width: 11%!important;
 }
 .logo-info img {
     width: 30%;
@@ -904,6 +909,10 @@ display: none;}
     margin-left: 2rem;
     width: 59%;
     font-family: "VanderKeur-light";
+    color:#fff;
+}
+:focus-visible {
+    outline: none;
 }
 .content-form {
     width: 31%;
