--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1726,6 +1726,16 @@ a:hover {
 }
 /*******mediasquery **********/
 @media only screen and (max-width: 600px) {
+    .custom-popup__holder {
+        width: 96%;
+        height: auto;
+        padding: 0;
+      }
+      .custom-popup__content {
+
+        padding: 0;
+        margin: 0;
+    }
     .main-mask {
         width: 89%;
         height: 214px;
@@ -2031,7 +2041,8 @@ a:hover {
         border-radius: 50%;
     }
     .fancy-hover__image {
-        max-width: 80%;
+        max-width: 66%;
+        margin-top: 4rem;
     }
     .card-flip__content--front {
         display: flex;
@@ -2093,7 +2104,12 @@ a:hover {
         margin-bottom: 1rem;
     }
     .main-private {
-        height: 100vh;
+
+    }
+    .bg-dark {
+
+        height: 80vh;
+
     }
     .home-main {
         height: 80vh;
