--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -190,6 +190,9 @@ h1 {
 .item-private{
     width: 50%;
 }
+.item-private video{
+    width: 100%;
+}
 .private-main{
     display: flex;
     flex-wrap: wrap;
