--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -193,6 +193,13 @@ h1 {
 .item-private video{
     width: 100%;
 }
+.item-private figure img, .item-private video {
+    max-width: 95%;
+    height: 400px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
 .private-main{
     display: flex;
     flex-wrap: wrap;
