--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -154,7 +154,7 @@ h1 {
     background-repeat: no-repeat;
     overflow: hidden;
 }
-.bg-light_folder::before {
+.bg-light_folder::after {
     position: absolute;
     content: "";
     background-image: url(../img/carpeta2.png);
@@ -1637,13 +1637,21 @@ a:hover {
     height: 0;
 }
 .main-mask {
-    width: 58%;
-    height: 450px;
+    width: 100%;
+    height: -webkit-fill-available;
 
     background-size: cover;
     -webkit-clip-path: url(#my-clip-path);
     clip-path: url(#my-clip-path);
     cursor: pointer;
+}
+.video-mask{
+    width: 50%;
+    height: 450px;
+    transition: .8s;
+}
+.video-mask:hover{
+    width: 52%;
 }
 .custom-popup {
   position: fixed;
