--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -196,7 +196,7 @@ h1 {
     width: 100%;
 }
 .item-private figure img, .item-private video {
-    max-width: 95%;
+    max-width: 100%;
     height: 400px;
     width: 100%;
     object-fit: cover;
@@ -1361,7 +1361,7 @@ display: none;}
     width: 420px;
     background-repeat: no-repeat;
     top: -1%;
-    margin-left: -12rem;
+    margin-left: -13rem;
     z-index: 9;
     box-shadow: 2px 14px 9px #00000075;
     border-radius: 3px;
@@ -1434,7 +1434,8 @@ display: none;}
     display: block;
 }
 figure img {
-    max-width: 95%;
+    max-width: 100%;
+    object-fit: cover;
 }
 .tab-content.current {
     display: inherit;
@@ -1454,6 +1455,7 @@ figure img {
     padding: 0 2rem;
     justify-items: center;
     align-items: center;
+    gap: 2rem;
 }
 .p-10 {
     padding-top: 10rem;
@@ -1475,7 +1477,7 @@ figure img {
 .name-gallery p {
     font-family: "DrukText";
     color: #000;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
 }
 .panel figure img {
     max-width: 100%;
