--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2559,7 +2559,16 @@ a:hover {
 }
 
 
-.modal.and.carousel {
-    position: fixed;
+
+/**
+ * Grid
+ */
+ .gallery__grid .row:nth-child(n+2) {
+    /* Adding some margin to create a bit of space under rows */
+    margin-top: 1rem;
   }
 
+  .gallery__column {
+    /* In case the image is bigger than the column */
+    overflow: hidden;
+  }
