--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2559,119 +2559,123 @@ a:hover {
 }
 
 
-#image-gallery .image{
-    position: absolute;
-}
-#gallery {
-    padding-top: 40px;
-  }
-  @media screen and (min-width: 991px) {
-    #gallery {
-      padding: 60px 30px 0 30px;
-    }
-  }
-
-  .img-wrapper {
-    position: relative;
-    margin-top: 15px;
-  }
-  .img-wrapper img {
-    width: 100%;
-  }
-
-  .img-overlay {
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-  }
-  .img-overlay i {
-    color: #fff;
-    font-size: 3em;
-  }
-
-  #overlay {
-    background: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
+.modal-window {
     position: fixed;
+    background-color: rgba(255, 255, 255, 0.25);
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 999;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
   }
-  #overlay img {
-    margin: 0;
-    width: 80%;
-    height: auto;
-    -o-object-fit: contain;
-       object-fit: contain;
-    padding: 5%;
+  .modal-window:target {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
   }
-  @media screen and (min-width: 768px) {
-    #overlay img {
-      width: 60%;
-    }
-  }
-  @media screen and (min-width: 1200px) {
-    #overlay img {
-      width: 50%;
-    }
-  }
-
-  #nextButton {
-    color: #fff;
-    font-size: 2em;
-    transition: opacity 0.8s;
-  }
-  #nextButton:hover {
-    opacity: 0.7;
-  }
-  @media screen and (min-width: 768px) {
-    #nextButton {
-      font-size: 3em;
-    }
-  }
-
-  #prevButton {
-    color: #fff;
-    font-size: 2em;
-    transition: opacity 0.8s;
-  }
-  #prevButton:hover {
-    opacity: 0.7;
-  }
-  @media screen and (min-width: 768px) {
-    #prevButton {
-      font-size: 3em;
-    }
-  }
-
-  #exitButton {
-    color: #fff;
-    font-size: 2em;
-    transition: opacity 0.8s;
+  .modal-window > div {
+    width: 400px;
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: white;
   }
-  #exitButton:hover {
-    opacity: 0.7;
+  .modal-window header {
+    font-weight: bold;
   }
-  @media screen and (min-width: 768px) {
-    #exitButton {
-      font-size: 3em;
-    }
+  .modal-window h1 {
+    font-size: 150%;
+    margin: 0 0 15px;
+  }
+
+  .modal-close {
+    color: #aaa;
+    line-height: 50px;
+    font-size: 80%;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    width: 70px;
+    text-decoration: none;
+  }
+  .modal-close:hover {
+    color: black;
+  }
+  .modal-window {
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.25);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
+  }
+  .modal-window:target {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .modal-window > div {
+    width: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: white;
+  }
+  .modal-window header {
+    font-weight: bold;
+  }
+  .modal-window h1 {
+    font-size: 150%;
+    margin: 0 0 15px;
+  }
+
+  .modal-close {
+    color: #aaa;
+    line-height: 50px;
+    font-size: 80%;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    width: 70px;
+    text-decoration: none;
+  }
+  .modal-close:hover {
+    color: black;
+  }
+
+  .modal-window > div {
+    border-radius: 1rem;
+  }
+
+  .modal-window div:not(:last-of-type) {
+    margin-bottom: 15px;
+  }
+
+  small {
+    color: lightgray;
+  }
+
+  .btn {
+    background-color: white;
+    padding: 1em 1.5em;
+    border-radius: 1rem;
+    text-decoration: none;
+  }
+  .btn i {
+    padding-right: 0.3em;
   }
