--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2559,123 +2559,71 @@ a:hover {
 }
 
 
-.modal-window {
-    position: fixed;
-    background-color: rgba(255, 255, 255, 0.25);
+
+.wrapper {
+    height: 100vh;
+    /* This part is important for centering the content */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* End center */
+    background: -webkit-linear-gradient(to right, #834d9b, #d04ed6);
+    background: linear-gradient(to right, #834d9b, #d04ed6);
+  }
+
+  .wrapper a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 3px;
+    text-transform: uppercase;
+    color: #585858;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .modal {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 999;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(77, 77, 77, .7);
+    transition: all .4s;
   }
-  .modal-window:target {
+
+  .modal:target {
     visibility: visible;
     opacity: 1;
-    pointer-events: auto;
-  }
-  .modal-window > div {
-    width: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 2em;
-    background: white;
-  }
-  .modal-window header {
-    font-weight: bold;
-  }
-  .modal-window h1 {
-    font-size: 150%;
-    margin: 0 0 15px;
   }
 
-  .modal-close {
-    color: #aaa;
-    line-height: 50px;
-    font-size: 80%;
+  .modal__content {
+    border-radius: 4px;
+    position: relative;
+    width: 500px;
+    max-width: 90%;
+    background: #fff;
+    padding: 1em 2em;
+  }
+
+  .modal__footer {
+    text-align: right;
+    a {
+      color: #585858;
+    }
+    i {
+      color: #d02d2c;
+    }
+  }
+  .modal__close {
     position: absolute;
-    right: 0;
-    text-align: center;
-    top: 0;
-    width: 70px;
+    top: 10px;
+    right: 10px;
+    color: #585858;
     text-decoration: none;
-  }
-  .modal-close:hover {
-    color: black;
-  }
-  .modal-window {
-    position: fixed;
-    background-color: rgba(255, 255, 255, 0.25);
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s;
-  }
-  .modal-window:target {
-    visibility: visible;
-    opacity: 1;
-    pointer-events: auto;
-  }
-  .modal-window > div {
-    width: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 2em;
-    background: white;
-  }
-  .modal-window header {
-    font-weight: bold;
-  }
-  .modal-window h1 {
-    font-size: 150%;
-    margin: 0 0 15px;
-  }
-
-  .modal-close {
-    color: #aaa;
-    line-height: 50px;
-    font-size: 80%;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    top: 0;
-    width: 70px;
-    text-decoration: none;
-  }
-  .modal-close:hover {
-    color: black;
-  }
-
-  .modal-window > div {
-    border-radius: 1rem;
-  }
-
-  .modal-window div:not(:last-of-type) {
-    margin-bottom: 15px;
-  }
-
-  small {
-    color: lightgray;
-  }
-
-  .btn {
-    background-color: white;
-    padding: 1em 1.5em;
-    border-radius: 1rem;
-    text-decoration: none;
-  }
-  .btn i {
-    padding-right: 0.3em;
   }
